Setup projectUtil module.